--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ script:
   - cd tests
   - pytest
 
-after_succes:
+after_success:
   - cd ..
   - pip install -r docs_requirements.txt
   - make -f docs/Makefile gh-pages
