--- a/docs/Makefile
+++ b/docs/Makefile
@@ -32,7 +32,7 @@ gh-pages:
 	rm -rf ./*
 	git checkout master $(GH_PAGES_SOURCES)
 	git reset HEAD
-	cd docs  && make -f ../Makefile html
+	cd docs  && make html
 	mv -fv $(BUILDDIR)/html/* ../
 	rm -rf $(GH_PAGES_SOURCES) build
 	git add -A
