--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,12 +1,13 @@
 # Minimal makefile for Sphinx documentation
-#
+# Carefully tested on 18 May 2017
 
 # You can set these variables from the command line.
 SPHINXOPTS    =
-SPHINXBUILD   = python -msphinx
+SPHINXBUILD   = sphinx-build
 SPHINXPROJ    = broadbean
 SOURCEDIR     = source
 BUILDDIR      = build
+GH_PAGES_SOURCES = docs broadbean
 
 # Put it first so that "make" without argument is like "make help".
 help:
@@ -14,7 +15,26 @@ help:
 
 .PHONY: help Makefile
 
-# Catch-all target: route all unknown targets to Sphinx using the new
-# "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
-%: Makefile
-	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+
+.PHONY: html
+html:
+	$(SPHINXBUILD) -b html $(SPHINXOPTS) . $(BUILDDIR)/html
+	@echo
+	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
+
+
+gh-pages:
+	git config --global user.email "bot@travics.com"
+	git config --global user.name "Documentation Bot"
+	git remote add upstream https://${GITHUB_API_KEY}@github.com/QCoDeS/broadbean.git
+	git fetch upstream
+	git checkout gh-pages
+	rm -rf ./*
+	git checkout master $(GH_PAGES_SOURCES)
+	git reset HEAD
+	cd docs  && make html
+	mv -fv docs/$(BUILDDIR)/html/* ../
+	rm -rf $(GH_PAGES_SOURCES) build
+	git add -A
+	git commit -m "Generated gh-pages for `git log master -1 --pretty=short \
+	--abbrev-commit`" && git push https://${GITHUB_API_KEY}@github.com/QCoDeS/broadbean.git gh-pages ; git checkout master
