--- a/.travis.yml
+++ b/.travis.yml
@@ -21,11 +21,13 @@ install:
   - pip install -r test_requirements.txt
   - pip install .
 
-# command sequence to run tests
+# command sequence to run tests, including executing the
+# tutorial notebooks
 script:
   - mypy broadbean --ignore-missing-imports
   - cd tests
   - pytest
+  - make -f docs/Makefile execute
 
 after_success:
   - cd ..
