Testing/execute notebooks (#58)
* Add notebook execution to the Makefile

* Make travis execute the notebooks

* Correct paths on travis

* Add jupyter as a test requirement

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,11 +21,14 @@ install:
   - pip install -r test_requirements.txt
   - pip install .
 
-# command sequence to run tests
+# command sequence to run tests, including executing the
+# tutorial notebooks
 script:
   - mypy broadbean --ignore-missing-imports
   - cd tests
   - pytest
+  - cd ../docs
+  - make execute
 
 after_success:
   - cd ..
