--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,7 +17,7 @@ build: false
 
 # Install scripts
 install:
-  - pip install --upgrade pip
+  - python -m pip install --upgrade pip
   - pip install -r test_requirements.txt
   - pip install .
 
