--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,8 +6,7 @@ branches:
     - version1.0
 
 environment:
-  matrix:
-    - PYTHON_VERSION: "3.6"
+  PYTHON_VERSION: "3.6"
 
 
 # Do not use MSBuild
