--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,7 +16,7 @@ build: false
 
 # Install scripts
 install:
-  - set PATH=%CONDA_INSTALL_LOCN%;%CONDA_INSTALL_LOCN%\scripts;%PATH%;
+  - set PATH=%CONDA_INSTALL_LOCATION%;%CONDA_INSTALL_LOCATION%\scripts;%PATH%;
   - conda update --all
   - conda info -a
   - conda create -q -n test-environment python=%PYTHON_VERSION% pip setuptools
