--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,6 +17,7 @@ build: false
 # Install scripts
 install:
   - set PATH=%CONDA_INSTALL_LOCATION%;%CONDA_INSTALL_LOCATION%\scripts;%PATH%;
+  - conda config --set always_yes true  # else AppVeyor will hang forever waiting for user ([y]/n)
   - conda update --all
   - conda info -a
   - conda create -q -n test-environment python=%PYTHON_VERSION% pip setuptools
