--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -21,7 +21,7 @@ install:
   - conda update --all
   - conda info -a
   - conda create -q -n test-environment python=%PYTHON_VERSION% pip setuptools
-  - conda activate test-environment
+  - activate test-environment
   - python -m pip install --upgrade pip
   - pip install -r test_requirements.txt
   - pip install .
