--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,6 +9,14 @@ environment:
   global:
     CONDA_INSTALL_LOCATION: "C:\\Miniconda36-x64"
 
+# Do not email the poor devs!
+notifications:
+  - provider: Email
+    settings:
+      on_build_success: false
+      on_build_failure: false
+      on_build_status_changed: false
+
 # Do not use MSBuild
 build: false
 
