--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -18,7 +18,7 @@ build: false
 install:
   - set PATH=%CONDA_INSTALL_LOCATION%;%CONDA_INSTALL_LOCATION%\scripts;%PATH%;
   - conda config --set always_yes true  # else AppVeyor will hang forever waiting for user ([y]/n)
-  - conda update --all
+  - conda update -n base conda
   - conda info -a
   - conda create -q -n test-environment python=%PYTHON_VERSION% pip setuptools
   - activate test-environment
