--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -24,6 +24,8 @@ install:
   - activate test-environment
   - python -m pip install --upgrade pip
   - pip install -r test_requirements.txt
+  # temporary solution while waiting for all files for matplotlib 3.0.0 on pypi
+  - pip install matplotlib==2.2.3
   - pip install .
 
 # Test scripts
