--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -49,7 +49,7 @@ jobs:
       run: mypy broadbean
     - name: Run tests
       run: |
-        pytest --cov=broadbean --cov-report xml
+        pytest --cov=broadbean --cov-report xml --hypothesis-profile ci
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3.1.0
       with:
