--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -81,7 +81,7 @@ jobs:
     - name: Build docs on windows
       run: |
         cd docs
-        execute_notebooks.cmd
+        ./execute_notebooks.cmd
       if: runner.os == 'Windows'
     - name: Upload build docs
       uses: actions/upload-artifact@v3.1.0
