--- a/setup.cfg
+++ b/setup.cfg
@@ -21,8 +21,18 @@ classifiers =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Topic :: Scientific/Engineering
-
 license = MIT
+
+[options.package_data]
+broadbean =
+    py.typed
+
+[options]
+include_package_data = True
+package_dir=
+    =.
+packages=find:
+
 python_requires = >=3.7
 # We might as well require what we know will work
 # although older numpy and matplotlib version will probably work too
@@ -33,8 +43,16 @@ install_requires =
     setuptools>=48
     versioningit>=1.1.0
 
-[options]
-include_package_data = True
-package_dir=
-    =.
-packages=find:
+[options.extras_require]
+test =
+    pytest>=6.2.2
+    pytest-cov>=3.0.0
+    coverage[toml]>=6.2
+    black>=22.3.0  # keep this in sync with .pre-commit-config.yaml
+    mypy>=0.960
+    types-pytz>=2021.3.0
+    jupyter>=1.0.0
+    hypothesis>=5.49.*,<7.0.0
+
+[options.packages.find]
+where=broadbean
