fix conda hypothesis ci

--- a/.github/workflows/conda-forge-install-and-test.yaml
+++ b/.github/workflows/conda-forge-install-and-test.yaml
@@ -45,4 +45,4 @@ jobs:
     - name: run pytest
       shell: bash -l {0}
       run: |
-         pytest --hypothesis-profile ci
+         pytest --hypothesis-profile ci broadbean
