--- a/.github/static/environment_forge_full.yml
+++ b/.github/static/environment_forge_full.yml
@@ -10,7 +10,7 @@ dependencies:
  - matplotlib>=2.2.3
  - schema
  # test requirements
- - hypothesis>=5.49.0
+ - hypothesis==6.46.7
  - pytest>=6.0.0
  - mypy
  - mypy_extensions
