--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ test =
     pytest>=6.2.2
     pytest-cov>=3.0.0
     coverage[toml]>=6.2
-    black>=22.3.0  # keep this in sync with .pre-commit-config.yaml
+    black>=22.3.0
     mypy>=0.960
     types-pytz>=2021.3.0
     jupyter>=1.0.0
