--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ maintainer_email = qcodes-support@microsoft.com
 description = Package for easily generating and manipulating signal 
                 pulses. Developed for use with qubits in the quantum 
                 computing labs of Copenhagen, Delft, and Sydney, but 
-                should be generally useable
+                should be generally useable.
 keywords = Pulsebuilding signal processing arbitrary waveforms
 long_description = file: README.md
 long_description_content_type = text/markdown
