--- a/.github/workflows/pytest-non-local.yaml
+++ b/.github/workflows/pytest-non-local.yaml
@@ -47,7 +47,7 @@ jobs:
     - name: install test_requirements.txt
       run: |
         pip install -r test_requirements.txt
-    - name: install qcodes
+    - name: install broadbean
       run: |
         pip install .
     - name: Test with pytest
@@ -55,5 +55,5 @@ jobs:
         cd ..
         mkdir empty
         cd empty
-        cp ../Qcodes/pyproject.toml .
-        python -c "import sys; import qcodes; ec = qcodes.test(); sys.exit(ec)"
+        cp ../broadbean/pyproject.toml .
+        python -c "import sys; import broadbean; ec = broadbean.test(); sys.exit(ec)"
