--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,12 @@ requires = [
 ]
 build-backend = 'setuptools.build_meta'
 
+[tool.darker]
+isort = true
+
+[tool.isort]
+profile = "black"
+
 [tool.pytest.ini_options]
 junit_family = "legacy"
 addopts = "--strict-markers"
