update ci to install from requirments.txt and setup.cfg

--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -37,12 +37,12 @@ jobs:
       uses: actions/cache@v3.0.2
       with:
         path: ${{ steps.prepare-cache-pip.outputs.cache-dir }}
-        key: ${{ runner.os }}-${{ matrix.python-version }}-pip-${{ hashFiles('**/test_requirements.txt') }}-${{ hashFiles('**/setup.py') }}
+        key: ${{ runner.os }}-${{ matrix.python-version }}-pip-${{ hashFiles('**/requirements.txt') }}-${{ hashFiles('**/setup.cfg') }}
         restore-keys: |
           ${{ runner.os }}-${{ matrix.python-version }}-pip-
-    - name: install test_requirements.txt
+    - name: install requirements.txt
       run: |
-        pip install -r test_requirements.txt
+        pip install -r requirements.txt
     - name: install broadbean
       run: |
         pip install .
