--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -61,16 +61,13 @@ jobs:
       uses: actions/cache@v3.0.2
       with:
         path: ${{ steps.prepare-cache-pip.outputs.cache-dir }}
-        key: ${{ runner.os }}-${{ matrix.python-version }}-pip-${{ hashFiles('**/test_requirements.txt') }}-${{ hashFiles('**/docs_requirements.txt') }}-${{ hashFiles('**/setup.py') }}
+        key: ${{ runner.os }}-${{ matrix.python-version }}-pip-${{ hashFiles('**/requirements.txt') }}-${{ hashFiles('**/setup.py') }}
         restore-keys: |
           ${{ runner.os }}-${{ matrix.python-version }}-pip-
 
-    - name: install test_requirements.txt
+    - name: install requirements.txt
       run: |
-        pip install -r test_requirements.txt
-    - name: install docs_requirements.txt
-      run: |
-        pip install -r docs_requirements.txt
+        pip install -r requirements.txt
     - name: install broadbean
       run: pip install .
     - name: Build docs on linux
