--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ requires = [
 build-backend = 'setuptools.build_meta'
 
 [tool.pytest.ini_options]
-junit_family = "legacy"
-addopts = "--strict-markers"
+minversion = "6.0"
+addopts = "-ra -q"
 
 [tool.mypy]
 ignore_missing_imports = true
