--- a/requirements.txt
+++ b/requirements.txt
@@ -33,8 +33,8 @@ idna~=3.3
 imagesize~=1.3.0
 iniconfig~=1.1.1
 ipykernel~=6.13.0
-ipython~=8.4.0; python_version>='3.8'
-ipython~=7.31.0; python_version<'3.8'
+ipython==8.4.0; python_version>='3.8'
+ipython==7.31.0; python_version<'3.8'
 ipython-genutils~=0.2.0
 ipywidgets~=7.7.0
 jedi~=0.18.1
@@ -51,8 +51,8 @@ MarkupSafe~=2.1.1
 matplotlib~=3.5.2
 matplotlib-inline~=0.1.3
 mistune~=0.8.4
-numpy~=1.21.5; python_version<'3.8'
-numpy~=1.22.4; python_version>='3.8'
+numpy==1.21.5; python_version < '3.8'
+numpy==1.22.4; python_version >= '3.8'
 mypy-extensions~=0.4.3
 nbclient~=0.6.4
 nbconvert~=6.5.0
@@ -83,7 +83,7 @@ pytest-cov~=3.0.0
 python-dateutil~=2.8.2
 pytz~=2022.1
 pywin32==304; sys_platform == 'win32'
-pywinpty~=2.0.5; sys_platform == 'win32'
+pywinpty==2.0.5; sys_platform == 'win32'
 PyYAML~=6.0
 pyzmq~=23.1.0
 qtconsole~=5.3.1
