--- a/requirements.txt
+++ b/requirements.txt
@@ -51,8 +51,8 @@ MarkupSafe~=2.1.1
 matplotlib~=3.5.2
 matplotlib-inline~=0.1.3
 mistune~=0.8.4
-numpy==1.21.5; python_version < '3.8'
-numpy==1.22.4; python_version >= '3.8'
+numpy~=1.21.5; python_version<'3.8'
+numpy~=1.22.4; python_version>='3.8'
 mypy-extensions~=0.4.3
 nbclient~=0.6.4
 nbconvert~=6.5.0
@@ -60,7 +60,6 @@ nbformat~=5.4.0
 nest-asyncio~=1.5.5
 nodeenv~=1.6.0
 notebook~=6.4.11
-numpy~=1.22.4
 packaging~=21.3
 pandocfilters~=1.5.0
 parso~=0.8.3
