--- a/requirements.txt
+++ b/requirements.txt
@@ -56,6 +56,7 @@ numpy~=1.23.0; python_version>='3.8'
 mypy~=0.961
 mypy-extensions~=0.4.3
 nbclient~=0.6.4
+nbsphinx~=0.8.9
 nbconvert~=6.5.0
 nbformat~=5.4.0
 nest-asyncio~=1.5.5
@@ -86,6 +87,7 @@ pywin32==304; sys_platform == 'win32'
 pywinpty==2.0.5; sys_platform == 'win32'
 PyYAML~=6.0
 pyzmq~=23.2.0
+qcodes~=0.34.1
 qtconsole~=5.3.1
 QtPy~=2.1.0
 requests~=2.28.0
@@ -99,10 +101,15 @@ Sphinx~=5.0.2
 sphinx-rtd-theme~=1.0.0
 sphinxcontrib-applehelp~=1.0.2
 sphinxcontrib-devhelp~=1.0.2
+sphinx-favicon~=0.2
 sphinxcontrib-htmlhelp~=2.0.0
 sphinxcontrib-jsmath~=1.0.1
 sphinxcontrib-qthelp~=1.0.3
 sphinxcontrib-serializinghtml~=1.1.5
+sphinxcontrib-towncrier~=0.2.1a0
+sphinx-jsonschema~=1.19.1
+sphinxcontrib-apidoc~=0.3.0
+sphinx-issues~=3.0.1
 stack-data~=0.3.0
 terminado~=0.15.0
 tinycss2~=1.1.1
