--- a/requirements.txt
+++ b/requirements.txt
@@ -105,6 +105,7 @@ sphinxcontrib-htmlhelp~=2.0.0
 sphinxcontrib-jsmath~=1.0.1
 sphinxcontrib-qthelp~=1.0.3
 sphinxcontrib-serializinghtml~=1.1.5
+sphinx-jsonschema~=1.19.1
 sphinxcontrib-apidoc~=0.3.0
 stack-data~=0.3.0
 terminado~=0.15.0
