--- a/.github/workflows/darker.yaml
+++ b/.github/workflows/darker.yaml
@@ -13,4 +13,4 @@ jobs:
         with:
           options: "--check --diff"
           src: "./broadbean"
-          revision: "origin/master..."
+          revision: "origin/main..."
