--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,58 @@
 [build-system]
 requires = [
-    "setuptools >= 56.0",
+    "setuptools >= 61.2",
     "wheel >= 0.29.0",
     "versioningit ~= 2.0.1",
 ]
 build-backend = 'setuptools.build_meta'
+
+[project]
+name = "broadbean"
+maintainers = [{name = "QCoDeS Core Developers", email = "qcodes-support@microsoft.com"}]
+description = """
+Package for easily generating and manipulating signal
+pulses. Developed for use with qubits in the quantum
+computing labs of Copenhagen, Delft, and Sydney, but
+should be generally useable."""
+keywords = ["Pulsebuilding signal processing arbitrary waveforms"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Topic :: Scientific/Engineering",
+]
+license = {text = "MIT"}
+urls = {Homepage = "https://github.com/QCoDeS/broadbean"}
+requires-python = ">=3.7"
+dependencies = [
+    "numpy>=1.12.1",
+    "matplotlib",
+    "schema",
+    "versioningit>=2.0.1",
+]
+dynamic = ["version"]
+
+[project.readme]
+file = "README.md"
+content-type = "text/markdown"
+
+[project.optional-dependencies]
+test = [
+    "pytest>=6.2.2",
+    "pytest-cov>=3.0.0",
+    "coverage[toml]>=6.2",
+    "black>=22.3.0",
+    "mypy>=0.960",
+    "types-pytz>=2021.3.0",
+    "jupyter>=1.0.0",
+    "hypothesis>=5.49.0",
+]
+
 
 [tool.pytest.ini_options]
 minversion = "6.0"
