--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,10 @@ test = [
     "jupyter>=1.0.0",
     "hypothesis>=5.49.0",
 ]
+docs = [
+    "sphinx",
+    "sphinx_rtd_theme",
+]
 
 
 [tool.pytest.ini_options]
