--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -68,6 +68,7 @@ jobs:
     - name: install broadbean & docs dependencies 
       run: |
         pip install -c requirements.txt .[docs,test]
+        # currently we are building api docs of the whole package including tests so we need to be able to import the tests and therefore require test dependencies to build the docs. 
     - name: Build docs on linux
       run: |
         cd docs
