--- a/.github/workflows/upload_to_pypi.yaml
+++ b/.github/workflows/upload_to_pypi.yaml
@@ -9,7 +9,7 @@ jobs:
   deploy:
 
     runs-on: ubuntu-latest
-
+    environment: pypi-release-env
     steps:
     - uses: actions/checkout@v3.0.2
     - name: Set up Python
