--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -17,14 +17,14 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python-version: [3.7, 3.9, "3.10"]
+        python-version: ["3.8", "3.9", "3.10"]
         exclude:
           - os: windows-latest
-            python-version: 3.9
+            python-version: "3.9"
           - os: windows-latest
-            python-version: 3.10
+            python-version: "3.10"
           - os: ubuntu-latest
-            python-version: 3.7
+            python-version: "3.8"
     env:
       DISPLAY: ':99.0'
       OS: ${{ matrix.os }}
