--- a/requirements.txt
+++ b/requirements.txt
@@ -33,8 +33,7 @@ idna~=3.4
 imagesize~=1.4.1
 iniconfig~=1.1.1
 ipykernel~=6.16.2
-ipython==8.6.0; python_version>='3.8'
-ipython==7.34.0; python_version<'3.8'
+ipython==8.6.0
 ipython-genutils~=0.2.0
 ipywidgets~=8.0.2
 jedi~=0.18.1
@@ -48,12 +47,10 @@ jupyterlab-pygments~=0.2.2
 jupyterlab-widgets~=3.0.3
 kiwisolver~=1.4.4
 MarkupSafe~=2.1.1
-matplotlib~=3.6.1; python_version>='3.8'
-matplotlib~=3.5.3; python_version<'3.8'
+matplotlib~=3.6.1
 matplotlib-inline~=0.1.6
 mistune~=2.0.4
-numpy~=1.21.5; python_version<'3.8'
-numpy~=1.23.4; python_version>='3.8'
+numpy~=1.23.4
 mypy~=0.982
 mypy-extensions~=0.4.3
 nbclient~=0.7.0
