add step to install/upgrade pip/setuptools/wheel
This was part of the prepare cache step that was removed.
Without wheel being installed old style packages with only
setup.py and no whl on pypi will trigger a deprecation warning.
This fixes that warning.

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -60,6 +60,9 @@ jobs:
         cache-dependency-path: |
           pyproject.toml
           requirements.txt
+    - name: upgrade pip setuptools wheel
+      run: python -m pip install --upgrade pip setuptools wheel
+      shell: bash
     - name: install broadbean & docs dependencies
       run: |
         pip install -c requirements.txt .[docs,test]
