--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,7 +17,7 @@ repos:
     - id: pyupgrade
       args: ['--py37-plus', '--keep-runtime-typing']
   - repo: https://github.com/akaihola/darker
-    rev: e3c210b5c1b91400c3f317b2474c10ab23bec1cf
+    rev: 1.6.0
     hooks:
       -   id: darker
           args: [-i]
