--- a/.github/workflows/darker.yaml
+++ b/.github/workflows/darker.yaml
@@ -9,6 +9,7 @@ jobs:
       - uses: actions/checkout@v3.5.2
         with:
           fetch-depth: 0
+      - uses: actions/setup-python@v4
       - uses: akaihola/darker@1.7.1
         with:
           options: "--check --diff"
