--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,8 @@ idna~=3.4
 imagesize~=1.4.1
 iniconfig~=2.0.0
 ipykernel~=6.23.0
-ipython==8.13.2
+ipython==8.12.0; python_version < '3.9'
+ipython==8.13.2; python_version >= '3.9'
 ipython-genutils~=0.2.0
 ipywidgets~=8.0.2
 jedi~=0.18.1
