--- a/.github/workflows/darker.yaml
+++ b/.github/workflows/darker.yaml
@@ -12,6 +12,6 @@ jobs:
       - uses: akaihola/darker@1.7.2
         with:
           options: "--check --diff"
-          src: "./broadbean"
+          src: "./src"
           revision: "origin/main..."
           version: "@e3c210b5c1b91400c3f317b2474c10ab23bec1cf"
