--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,13 @@ module = [
 ]
 ignore_missing_imports = true
 
+[tool.ruff]
+
+extend-include = ["*.ipynb"]
+
+[tool.ruff.lint.per-file-ignores]
+"*.ipynb" = ["E402"]
+
 [tool.versioningit]
 default-version = "0.0"
 
