--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,7 +78,7 @@ ignore_missing_imports = true
 extend-include = ["*.ipynb"]
 
 [tool.ruff.lint]
-extend-select = ["UP"]
+extend-select = ["UP", "ISC"]
 
 [tool.ruff.lint.per-file-ignores]
 "*.ipynb" = ["E402"]
