--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,9 +3,13 @@ repos:
     # Ruff version.
     rev: 'v0.3.0'
     hooks:
+    # Run the linter
     - id: ruff
       types_or: [python, pyi, jupyter, toml]
       args: [ --fix, --exit-non-zero-on-fix ]
+    # Run the formatter
+    - id: ruff-format
+      types_or: [ python, pyi, jupyter ]
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
     hooks:
@@ -18,7 +22,3 @@ repos:
     - id: debug-statements
     - id: mixed-line-ending
       args: ['--fix=no']
-  - repo: https://github.com/akaihola/darker
-    rev: 1.7.3
-    hooks:
-      -   id: darker
