--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -61,6 +61,6 @@ jobs:
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@015f24e6818733317a2da2edd6290ab26238649a # v5.0.7
       with:
-        file: ./coverage.xml
+        files: ./coverage.xml
         env_vars: OS,PYTHON
         token: ${{ secrets.CODECOV_TOKEN }}
