--- a/requirements.txt
+++ b/requirements.txt
@@ -65,7 +65,8 @@ iniconfig==2.0.0
     # via pytest
 ipykernel==6.29.5
     # via broadbean (pyproject.toml)
-ipython==9.0.1
+ipython==8.33.0; python_version < '3.11'
+ipython==9.0.1; python_version >= '3.11'
     # via ipykernel
 jedi==0.19.2
     # via ipython
