--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -22,10 +22,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.11", "3.12", "3.13"]
         exclude:
-          - os: windows-latest
-            python-version: "3.10"
           - os: windows-latest
             python-version: "3.12"
           - os: windows-latest
