--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -23,10 +23,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.11", "3.12", "3.13"]
         exclude:
-          - os: windows-latest
-            python-version: "3.11"
           - os: windows-latest
             python-version: "3.12"
           - os: windows-latest
