Added plotly backend

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,9 @@ docs = [
     "sphinx-jsonschema",
     "ipykernel",
 ]
+plotly = [
+    "plotly>=5.0.0",
+]
 
 
 [tool.pytest.ini_options]
@@ -67,7 +70,8 @@ warn_redundant_casts = true
 [[tool.mypy.overrides]]
 module = [
     "matplotlib.*",
-    "schema"
+    "schema",
+    "plotly.*"
 ]
 ignore_missing_imports = true
 
@@ -94,7 +98,7 @@ sdist = "versioningit.cmdclass.sdist"
 build_py = "versioningit.cmdclass.build_py"
 
 [tool.versioningit]
-default-version = "0.0"
+default-version = "0.16.0"
 
 [tool.versioningit.format]
 distance = "{next_version}.dev{distance}+{branch}.{vcs}{rev}"
