--- a/requirements.txt
+++ b/requirements.txt
@@ -152,6 +152,8 @@ pillow==12.1.0
     # via matplotlib
 platformdirs==4.5.1
     # via jupyter-core
+plotly==6.5.0
+    # via broadbean (pyproject.toml)
 pluggy==1.6.0
     # via
     #   pytest
